# aws_task_2

./: README.md  main.py  pyproject.toml
aws_cli/: bucket_operations.py  ec2_operations.py  vpc_operations.py
utils/: init_client.py
